--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ yarn-error.log
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
-
+package-lock.json
 # Miscellaneous
 /.angular/cache
 .sass-cache/
@@ -36,7 +36,7 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-
+src/assets/Image/
 # System files
 .DS_Store
 Thumbs.db
